welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	var c : Int = Math.abs(10 - a);
	var d : Int = Math.abs(10 - b);
	if (c<d) {return a;
	
	} else {
		if (d<c) {return b;
		
		} else {
			if (c==d) {return 0;
			
			} 
		}
	}
}
